src/grammar/cppParser.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "using namespace std;";
  var peg$c1 = "#include";
  var peg$c2 = "<";
  var peg$c3 = ">";
  var peg$c4 = "typedef";
  var peg$c5 = ";";
  var peg$c6 = "int main()";
  var peg$c7 = "(";
  var peg$c8 = ")";
  var peg$c9 = ",";
  var peg$c10 = "{";
  var peg$c11 = "}";
  var peg$c12 = "if";
  var peg$c13 = "else";
  var peg$c14 = "while";
  var peg$c15 = "for";
  var peg$c16 = "=";
  var peg$c17 = "[";
  var peg$c18 = "]";
  var peg$c19 = "cout";
  var peg$c20 = "<<";
  var peg$c21 = "cin";
  var peg$c22 = ">>";
  var peg$c23 = "return";
  var peg$c24 = "+=";
  var peg$c25 = "-=";
  var peg$c26 = "||";
  var peg$c27 = "&&";
  var peg$c28 = "==";
  var peg$c29 = "!=";
  var peg$c30 = "<=";
  var peg$c31 = ">=";
  var peg$c32 = "+";
  var peg$c33 = "-";
  var peg$c34 = "*";
  var peg$c35 = "/";
  var peg$c36 = "%";
  var peg$c37 = "++";
  var peg$c38 = "--";
  var peg$c39 = "int";
  var peg$c40 = "float";
  var peg$c41 = "string";
  var peg$c42 = "bool";
  var peg$c43 = "void";
  var peg$c44 = "using";
  var peg$c45 = "namespace";
  var peg$c46 = "\"";
  var peg$c47 = "true";
  var peg$c48 = "false";
  var peg$c49 = "//";

  var peg$r0 = /^[a-zA-Z0-9_.]/;
  var peg$r1 = /^[a-zA-Z_]/;
  var peg$r2 = /^[a-zA-Z0-9_]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[^"]/;
  var peg$r5 = /^[ \t\n\r]/;
  var peg$r6 = /^[^\n]/;

  var peg$e0 = peg$literalExpectation("using namespace std;", false);
  var peg$e1 = peg$literalExpectation("#include", false);
  var peg$e2 = peg$literalExpectation("<", false);
  var peg$e3 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "."], false, false);
  var peg$e4 = peg$literalExpectation(">", false);
  var peg$e5 = peg$literalExpectation("typedef", false);
  var peg$e6 = peg$literalExpectation(";", false);
  var peg$e7 = peg$literalExpectation("int main()", false);
  var peg$e8 = peg$literalExpectation("(", false);
  var peg$e9 = peg$literalExpectation(")", false);
  var peg$e10 = peg$literalExpectation(",", false);
  var peg$e11 = peg$literalExpectation("{", false);
  var peg$e12 = peg$literalExpectation("}", false);
  var peg$e13 = peg$literalExpectation("if", false);
  var peg$e14 = peg$literalExpectation("else", false);
  var peg$e15 = peg$literalExpectation("while", false);
  var peg$e16 = peg$literalExpectation("for", false);
  var peg$e17 = peg$literalExpectation("=", false);
  var peg$e18 = peg$literalExpectation("[", false);
  var peg$e19 = peg$literalExpectation("]", false);
  var peg$e20 = peg$literalExpectation("cout", false);
  var peg$e21 = peg$literalExpectation("<<", false);
  var peg$e22 = peg$literalExpectation("cin", false);
  var peg$e23 = peg$literalExpectation(">>", false);
  var peg$e24 = peg$literalExpectation("return", false);
  var peg$e25 = peg$literalExpectation("+=", false);
  var peg$e26 = peg$literalExpectation("-=", false);
  var peg$e27 = peg$literalExpectation("||", false);
  var peg$e28 = peg$literalExpectation("&&", false);
  var peg$e29 = peg$literalExpectation("==", false);
  var peg$e30 = peg$literalExpectation("!=", false);
  var peg$e31 = peg$literalExpectation("<=", false);
  var peg$e32 = peg$literalExpectation(">=", false);
  var peg$e33 = peg$literalExpectation("+", false);
  var peg$e34 = peg$literalExpectation("-", false);
  var peg$e35 = peg$literalExpectation("*", false);
  var peg$e36 = peg$literalExpectation("/", false);
  var peg$e37 = peg$literalExpectation("%", false);
  var peg$e38 = peg$literalExpectation("++", false);
  var peg$e39 = peg$literalExpectation("--", false);
  var peg$e40 = peg$literalExpectation("int", false);
  var peg$e41 = peg$literalExpectation("float", false);
  var peg$e42 = peg$literalExpectation("string", false);
  var peg$e43 = peg$literalExpectation("bool", false);
  var peg$e44 = peg$literalExpectation("void", false);
  var peg$e45 = peg$literalExpectation("using", false);
  var peg$e46 = peg$literalExpectation("namespace", false);
  var peg$e47 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e48 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e49 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e50 = peg$literalExpectation("\"", false);
  var peg$e51 = peg$classExpectation(["\""], true, false);
  var peg$e52 = peg$literalExpectation("true", false);
  var peg$e53 = peg$literalExpectation("false", false);
  var peg$e54 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e55 = peg$literalExpectation("//", false);
  var peg$e56 = peg$classExpectation(["\n"], true, false);

  var peg$f0 = function(includes, globals) {
      const main = globals.find(g => g.type === 'MainFunction');
      const functions = globals.filter(g => g.type === 'FunctionDefinition');
      // Filter typedefs to pass to analysis
      const typedefs = globals.filter(g => g.type === 'Typedef'); 
      return { type: "Program", body: main, functions, typedefs };
    };
  var peg$f1 = function(chars) { return { type: "Include", value: chars.join("") }; };
  var peg$f2 = function(oldType, newName) {
      return { type: "Typedef", originalType: oldType, name: newName };
    };
  var peg$f3 = function(body) { return { type: "MainFunction", body }; };
  var peg$f4 = function(type, name, params, body) {
      return { type: "FunctionDefinition", returnType: type, name, params: params || [], body };
    };
  var peg$f5 = function(head, tail) { return [head, ...tail]; };
  var peg$f6 = function(type, name) { return { type: "Parameter", varType: type, name }; };
  var peg$f7 = function(stmts) { return { type: "Block", body: stmts }; };
  var peg$f8 = function(expr) { return expr; };
  var peg$f9 = function(test, consequent, alternate) {
      return { type: "IfStatement", test, consequent, alternate };
    };
  var peg$f10 = function(test, body) {
      return { type: "WhileStatement", test, body };
    };
  var peg$f11 = function(init, cond, step, body) {
      return { type: "ForStatement", init, test: cond, update: step, body };
    };
  var peg$f12 = function(type, name, init) {
      return { type: "VariableDeclaration", varType: type, name, value: init };
    };
  var peg$f13 = function(type, name, size) {
      return { type: "ArrayDeclaration", varType: type, name, size: size.value };
    };
  var peg$f14 = function(val, chained) { return { type: "OutputStatement", value: val }; };
  var peg$f15 = function(val) { return { type: "InputStatement", value: val }; };
  var peg$f16 = function(val) { return { type: "ReturnStatement", value: val }; };
  var peg$f17 = function(left, op, right) { return { type: "Assignment", operator: op, left, right }; };
  var peg$f18 = function(left, right) { return { type: "BinaryExp", op: "||", left, right }; };
  var peg$f19 = function(left, right) { return { type: "BinaryExp", op: "&&", left, right }; };
  var peg$f20 = function(left, op, right) { return { type: "BinaryExp", op, left, right }; };
  var peg$f21 = function(left, op, right) { return { type: "BinaryExp", op, left, right }; };
  var peg$f22 = function(left, op, right) { return { type: "BinaryExp", op, left, right }; };
  var peg$f23 = function(left, op, right) { return { type: "BinaryExp", op, left, right }; };
  var peg$f24 = function(op, arg) { return { type: "UpdateExp", op, arg, prefix: true }; };
  var peg$f25 = function(expr) { return expr; };
  var peg$f26 = function(name, args) { return { type: "FunctionCall", name, args: args || [] }; };
  var peg$f27 = function(head, tail) { return [head, ...tail]; };
  var peg$f28 = function(name, index) { return { type: "ArrayAccess", name, index }; };
  var peg$f29 = function(chars) { return chars.flat().join(""); };
  var peg$f30 = function(name) { return { type: "Identifier", name }; };
  var peg$f31 = function(digits) { return { type: "Literal", value: parseInt(digits.join(""), 10) }; };
  var peg$f32 = function(chars) { return { type: "Literal", value: chars.join("") }; };
  var peg$f33 = function() { return { type: "Literal", value: true }; };
  var peg$f34 = function() { return { type: "Literal", value: false }; };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseprogram();

    return s0;
  }

  function peg$parseprogram() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseinclude_directive();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseinclude_directive();
    }
    s3 = peg$parse_();
    if (input.substr(peg$currPos, 20) === peg$c0) {
      s4 = peg$c0;
      peg$currPos += 20;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = [];
      s7 = peg$parseglobal_element();
      while (s7 !== peg$FAILED) {
        s6.push(s7);
        s7 = peg$parseglobal_element();
      }
      s7 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2, s6);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinclude_directive() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 60) {
        s3 = peg$c2;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s3 !== peg$FAILED) {
        s4 = [];
        if (peg$r0.test(input.charAt(peg$currPos))) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            if (peg$r0.test(input.charAt(peg$currPos))) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 62) {
            s5 = peg$c3;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f1(s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseglobal_element() {
    var s0;

    s0 = peg$parsemain_function();
    if (s0 === peg$FAILED) {
      s0 = peg$parsefunction_definition();
      if (s0 === peg$FAILED) {
        s0 = peg$parsetypedef_declaration();
        if (s0 === peg$FAILED) {
          s0 = peg$parsedeclaration();
        }
      }
    }

    return s0;
  }

  function peg$parsetypedef_declaration() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parsetype_specifier();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseidentifier();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 59) {
            s7 = peg$c5;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s7 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f2(s3, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsemain_function() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 10) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 10;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseblock();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefunction_definition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parsetype_specifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseidentifier();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 40) {
          s5 = peg$c7;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e8); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseparameter_list();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s9 = peg$c8;
            peg$currPos++;
          } else {
            s9 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e9); }
          }
          if (s9 !== peg$FAILED) {
            s10 = peg$parse_();
            s11 = peg$parseblock();
            if (s11 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f4(s1, s3, s7, s11);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseparameter_list() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseparameter();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s5 = peg$c9;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e10); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseparameter();
        if (s7 !== peg$FAILED) {
          s4 = s7;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c9;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e10); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseparameter();
          if (s7 !== peg$FAILED) {
            s4 = s7;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f5(s1, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseparameter() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsetype_specifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseidentifier();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f6(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseblock() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c10;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e11); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parsestatement();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parsestatement();
      }
      s4 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 125) {
        s5 = peg$c11;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e12); }
      }
      if (s5 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f7(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0;
